<resources>
    <string name="app_name">ISTANT</string>
    <string name="title_activity_settings" translatable="false">activity_settings</string>
    <string name="checkinternetconnectivity_alertnointernetmessage">Connessione Internet assente</string>
    <string name="checkinternetconnectivity_alertnointernetmessage_checkagain">Controlla nuovamente</string>
    <string name="checkinternetconnectivity_alertnointernetmessage_close">Chiudi</string>
    <string name="settings_managechildren_activity_title">LISTA DEI FIGLI</string>
    <string name="settings_managechildren_activity_subtitle">Tieni premuto per cancellare un figlio</string>
    <string name="settings_btn">Crea figlio</string>
    <string name="default_activity_title">Scegli un\'attività di default o crea la tua attività personalizzata</string>
    <string name="default_activity_personalizedactivity">Attività personalizzata</string>
    <string name="fragmentuser_textview_name">Nome</string>
    <string name="fragmentuser_textview_surname">Cognome</string>
    <string name="fragmentuser_textview_phonenumber">Cellulare</string>
    <string name="fragmentuser_textview_fiscalcode">Codice Fiscale</string>
    <string name="fragmentuser_textview_address">Indirizzo</string>
    <string name="fragmentuser_textview_email">Email</string>
    <string name="fragmentuser_textview_gender">Sesso</string>
    <string name="fragmentuser_genderradiobutton_m">M</string>
    <string name="fragmentuser_genderradiobutton_f">F</string>
    <string name="fragmentuser_date">Date</string>
    <string name="fragmentuser_textview_dateofbirth">Data di nascita</string>
    <string name="fragmentuser_buttonSave">Salva modifiche</string>
    <string name="fragmentuser_buttonManageChildren">Gestisci figli</string>
    <string name="fragmentuser_textview_modify">Modifica</string>
    <string name="fragmentuser_button_modify">Modifica</string>
    <string name="textview_address">Indirizzo</string>
    <string name="textview_dateStart">Data di inizio</string>
    <string name="textview_dateEnd">Data di termine</string>
    <string name="textview_description">Descrizione</string>
    <string name="textview_participants">Partecipanti</string>
    <string name="button_participate">Partecipa come organizzatore</string>
    <string name="button_viewParticipants">Visualizza gli organizzatori</string>
    <string name="type_a_message">Scrivi un messaggio</string>
    <string name="textview_image">Immagine</string>
    <string name="button_modifysave">Modifica</string>
    <string name="textview_modifysave">Modifica</string>
    <string name="button_delete">Elimina</string>
    <string name="textview_delete">Elimina</string>
    <string name="visualizeactivity_textview_rating">Valutazione</string>
    <string name="visualize_activity_reviewsbtn">Recensioni</string>
    <string name="search_button_buttonsearch">Cerca</string>
    <string name="search_tv24">Cerca l\'utente per nome</string>
    <string name="search_hint">Inserisci nome utente</string>
    <string name="fragmentLoans_buttonNewLoan">Crea un nuovo prestito</string>
    <string name="fragmentloans_switchLoans">I miei prestiti</string>
    <string name="fragmentLoans_textView_title">Prestiti</string>
    <string name="fragmentActivities_textView_title">Attività</string>
    <string name="fragmentActivities_switchActivities">Le mie attività</string>
    <string name="fragmentActivities_buttonNewActivity">Crea nuova attività</string>
    <string name="visualizeloans_textview_description">Descrizione</string>
    <string name="visualizeloans_textview_datestart">Data di inizio</string>
    <string name="visualizeloans_textview_dateend">Data di termine</string>
    <string name="visualizeloans_participate">Prendi in prestito</string>
    <string name="groupinfo_nomegruppo">Gruppo classe 3ª A</string>
    <string name="groupinfo_descrizionegruppo">Descrizione Gruppo</string>
    <string name="groupinfo_textview_descrizione">Gruppo riservato ai genitori dei ragazzi della classe 3ª sezione A di Venezia. Qui si possono gestire i vari prestiti di oggetti e la partecipazione dei propri figli alle attività autogestite. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guide">guida</string>
    <string name="activityGDPR_title">GDPR - ISTANT App</string>
    <string name="activityGDPR_textview_info">Iscrivendoti accetti integralmente il documento GDPR (visionabile cliccando il bottone soprastante).</string>
    <string name="activitylogin_edittext_emaillogin" translatable="false">Email</string>
    <string name="activitylogin_edittext_passwordlogin" translatable="false">Password</string>
    <string name="activitylogin_button_login" translatable="false">Login</string>
    <string name="activitylogin_button_createaccount">Crea un nuovo account</string>
    <string name="activitylogin_button_passwordforgotten">Hai dimenticato la password?</string>
    <string name="activityregistration_edittext_name">Nome</string>
    <string name="activityregistration_edittext_registrationemail">Email</string>
    <string name="activityregistration_edittext_registationpassword">Inserici la password</string>
    <string name="activityregistration_edittext_reenterregistationpassword">Conferma password</string>
    <string name="activityregistration_button_registration">Registrazione</string>
    <string name="activityregistration_edittext_regitrationsurname">Cognome</string>
    <string name="activityregistration_button_gotologin">Torna al login</string>
    <string name="activityregistration_button_gdpr" translatable="false">GDPR</string>
    <string name="createNewLoan_buttontext_create">Crea</string>
    <string name="createNewLoan_textview_dateend">Data di termine</string>
    <string name="createNewLoan_textview_datestart">Data di inizio</string>
    <string name="createNewLoan_textview_description">Descrizione</string>
    <string name="createNewLoan_textview_name">Nome</string>
    <string name="createNewActivity_textview_name">Nome</string>
    <string name="createNewActivity_textview_description">Descrizione</string>
    <string name="createNewActivity_textview_datestart">Data di inzio</string>
    <string name="createNewActivity_textview_dateend">Data di termine</string>
    <string name="createNewActivity_textview_address">Indirizzo</string>
    <string name="optionmenu_resetpassword">Reimposta password</string>
    <string name="optionmenu_deleteaccount">Cancella l\'account</string>
    <string name="optionmenu_logout" translatable="false">Logout</string>
    <string name="optionmenu_userguide">Guida</string>
    <string name="createnewactivity_addactivity">Aggiunto con successo</string>
    <string name="createnewactivity_actionbar">Crea una nuova attività</string>
    <string name="createNewActivity_piedibus">PediBus</string>
    <string name="createNewActivity_allenamentonuoto">Allenamento Nuoto</string>
    <string name="createNewActivity_allenamentocalcio">Allenamento Calcio</string>
    <string name="createNewActivity_partitatennis">Partita Tennis</string>
    <string name="createNewActivity_corsocanto">Corso Canto</string>
    <string name="createNewActivity_personalizzata">Personalizzata</string>
    <string name="createNewActivity_piedibus_description">Andiamo a scuola con il piedibus</string>
    <string name="createNewActivity_allenamentonuoto_description">Portiamo i figli all\'allenamento di nuoto</string>
    <string name="createNewActivity_allenamentocalcio_description">Portiamo i figli all\'allenamento di calcio</string>
    <string name="createNewActivity_partitatennis_description">Portiamo i figli alla partita di tennis</string>
    <string name="createNewActivity_corsocanto_description">Portiamo i figli al corso di canto</string>
    <string name="createNewActivity_fornisciindirizzo">L\'indirizzo deve essere fornito!</string>
    <string name="activitycreatenewchild_givename">Il nome deve essere fornito!</string>
    <string name="activitycreatenewchild_givesex">Il sesso deve essere fornito!</string>
    <string name="activitycreatenewchild_givedateofbirth">La data di nascita deve essere fornita!</string>
    <string name="activitycreatenewchild_addedchild">Figlio aggiunto con successo!</string>
    <string name="activitycreatenewloan_givename">Il nome deve essere fornito!</string>
    <string name="activitycreatenewloan_givedescription">La descrizione deve essere fornita!</string>
    <string name="activitycreatenewloan_givedatestart">La data di inizio deve essere fornita!</string>
    <string name="activitycreatenewloan_giveenddate">La data di termine deve essere fornita!</string>
    <string name="activitycreatenewloan_addedloansuccessfully">Prestito aggiunto con successo!</string>
    <string name="activitycreatenewloan_errordate">La data di termine deve essere successiva a quella di inizio!</string>
    <string name="activitycreatenewloan_createnewloan">Crea un nuovo prestito</string>
    <string name="activityGDPR_actionbarname" translatable="false">GDPR</string>
    <string name="activityguideactionbarname">Guida</string>
    <string name="activitysettingsmanagechildren_managechildren">Gestisci i tuoi figli</string>
    <string name="activityvisualizeactivities_actionbarname">Scheda dell\'attività</string>
    <string name="activityvisualizeactivities_eliminazioneconsuccesso">Eliminazione avvenuta con successo</string>
    <string name="activityvisualizeactivities_oraseiunorganizzatore">Ora sei un organizzatore!</string>
    <string name="activityvisualizeloans_save">Salva</string>
    <string name="activityvisualizeloans_modifiy">Modifica</string>
    <string name="activityvisualizeloans_successfullupdate">Aggiornamento avvenuto con successo</string>
    <string name="activityvisualizeloans_failedupdate">Aggiornamento fallito</string>
    <string name="activityvisualizeloans_successfullloandeletion">Prestito cancellato correttamente</string>
    <string name="activityvisualizeloans_giveback">Restituisci</string>
    <string name="activityvisualizeloans_notavailable">Occupato</string>
    <string name="activityvisualizeloans_loanstartedcorrectly">Oggetto preso in prestito correttamente!</string>
    <string name="activityvisualizeloans_gavebackloan">Hai restituito correttamente il prestito!</string>
    <string name="activityvisualizeloans_loadingerror">Errore nel caricamento</string>
    <string name="activityvisualizeloans_imageloaded">Immagine caricata!</string>
    <string name="activityvisualizeloans_unsuccessfullupload">Caricamento fallito!</string>
    <string name="activityvisualizeloans_titoloactivity">Scheda del prestito</string>
    <string name="activityvisualizeloans_caricamentoimmagine">Caricamento immagine...</string>
    <string name="activityvisualizeloans_name">Nome</string>
    <string name="activityvisualizeusers_actionbarname">Profilo utente</string>
    <string name="createreviewactivity_insertcomment">Necessario inserire un commento nella recensione!</string>
    <string name="createreview_tv">Lascia la tua recensione</string>
    <string name="createreview_hint">Recensione</string>
    <string name="createreview_send">Invia</string>
    <string name="loginactivity_alertpasswortreset_name">Vuoi reimpostare la password?</string>
    <string name="loginactivity_alertpasswortreset_message">Inserisci la mail per il reset della password</string>
    <string name="loginactivity_alertpasswortreset_givemail">La mail deve essere fornita</string>
    <string name="loginactivity_alertpasswortreset_emailsent">Email spedita</string>
    <string name="loginactivity_alertpasswortreset_cancel" translatable="false">Cancel</string>
    <string name="loginactivity_loginbutton_noemail">La email non è stata fornita</string>
    <string name="loginactivity_loginbutton_nopassword">La password non è stata fornita</string>
    <string name="loginactivity_reset" translatable="false">Reset</string>
</resources>